src/tests/ui/self-receiver-copy-err.vif
const S = struct {
    a: i32,

    pub fn by_val(self: Self) i32 {
        return self.a
    }
}

fn main() void {
    var instance: S = .{ .a = 42 }
    S.by_val(&instance)
}

//@ args: build
//@ stderr:
// error: expected type `S`, found `*S`
//    --> src/tests/ui/self-receiver-copy-err.vif:11:14
//    |
// 11 |     S.by_val(&instance)
//    |              ^^^^^^^^^
//
